--- a/app/src/main/res/layout/activity_verificacion.xml
+++ b/app/src/main/res/layout/activity_verificacion.xml
@@ -7,7 +7,7 @@
     tools:context="uy.com.antel.capacitacion.pruebacursobasico.Verificacion">
 
     <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
+        style="@android:style/Widget.ProgressBar.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
